@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 29, 2008</p>
+      <p>Last Updated: August 30, 2008</p>
     </td>
   </tr>
 </table>
@@ -1061,7 +1061,9 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* NSH: Add mem command to display heap usage
 	* Added telnet NSH configuration for Neuros OSD.
 	* Basic integration of concurrent telnet/serial NSH functional on Neuros
-	  OSD (some bugs on background commands).
+	  OSD.
+	* Fixed a critical bug that effects the way that environement variables are
+	  shared amongst pthreads.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
